Added nameserver option, harmonized config and arguments

--- a/config.ini
+++ b/config.ini
@@ -1,42 +1,45 @@
 # In all sections, tld defintions can either be explicit tlds, or one the supplied tld lists
 # These lists are: all_tlds, all_tlds_incl_slds, abused, top5, top15
 
+[GENERAL]
+Threads = 5
+Rate = 10
+# Nameserver =
+
+
 [CHARS]
-# TLDs = abused
+TLDs = abused
 
 
 [HOMO]
-# TLDs = abused
+TLDs = abused
 
 
 [CCODES]
-# TLDs = abused
+TLDs = abused
 
 
 [PHISHING]
-# TLDs = abused
+TLDs = abused
 
 
 [NUMBERS]
-# TLDs = abused
+TLDs = abused
 
 
 [WIKI]
-# TLDs = top5
+TLDs = top5
 
 # Which wikipedia articles should be used to generate the wordlist
-# Terms = cyber computer hacker malware software tiger
+# Lemmas = en:whale
 
 # How many of these related terms should be scanned
-# Count = 750
-
-# Which wikipedia language version should be used
-# Language = en
+Count = 750
 
 
 [WORDLIST]
-# TLDs = abused
+TLDs = abused
 
-# Additional wordlists - please specify complete path
-# Wordlists = /home/fant/wordlist/animals.txt
+# Additional wordlist - please specify complete path
+# Path = /home/fant/wordlist/animals.txt
 
